10-kubernetes-ingress-samples/1-ingress-sample-one.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: kube-aci-demo
  name: kube-aci-demo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kube-aci-demo
  template:
    metadata:
      labels:
        app: kube-aci-demo
    spec:
      containers:
      - image: microsoft/aci-helloworld
        name: kube-aci-demo
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kube-aci-demo
  name: kube-aci-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kube-aci-demo
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-aci-demo
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /v1
        backend:
          serviceName: kube-aci-demo
          servicePort: 80
